--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "express-useragent": "^0.2.4",
+    "moment": "^2.13.0",
     "vue": "^1.0.24",
     "vue-resource": "^0.1.16",
     "vue-router": "^0.7.13",
